--- a/WhyCookIn (외쿸인)/WhyCookIn (외쿸인)/Info.plist
+++ b/WhyCookIn (외쿸인)/WhyCookIn (외쿸인)/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NMFClientId</key>
+	<string>4gr3vrh2nb</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
